converting to recyclerview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,10 @@
-
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical"-->
+    <!--android:id="@+id/container"-->
+    <!--tools:context="com.example.myswipelist.MainActivity" >-->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,27 +12,32 @@
     android:id="@+id/container"
     tools:context="com.example.myswipelist.MainActivity" >
 
-    <android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/swipe_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
-        
-    <com.example.myswipelist.MyEnhancedListView
-        android:id="@+id/list"
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+    <!--android:id="@+id/swipe_container"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:persistentDrawingCache="animation|scrolling"
-        android:listSelector="@null"
         android:clickable="false"
         android:layout_height="match_parent"/>
+    <!--<com.example.myswipelist.MyEnhancedListView-->
+        <!--android:id="@+id/list"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:persistentDrawingCache="animation|scrolling"-->
+        <!--android:listSelector="@null"-->
+        <!--android:clickable="false"-->
+        <!--android:layout_height="match_parent"/>-->
 	
-    </android.support.v4.widget.SwipeRefreshLayout>
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
     
-    <FrameLayout
-        android:id="@+id/contentViewContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-         />
+    <!--<FrameLayout-->
+        <!--android:id="@+id/contentViewContainer"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:visibility="gone"-->
+         <!--/>-->
       
 </FrameLayout>
+<!--</LinearLayout>-->
